google analytics add

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DataDaur - AI Consulting</title>
     <meta name="description" content="Boost growth with AI-powered tools, web & mobile development, and custom software solutions. Book a free 30-min consultation today!"/>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QE7CLX5MDG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QE7CLX5MDG');
+    </script>
   </head>
   <body>
     <div id="root"></div>
