Added SEO metadata and add dynamic sitemap generation,

--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
     <meta property="og:description"
           content="Boost growth with AI-powered tools, web & mobile development, and custom software solutions. Book your free 30-min strategy call today."/>
     <meta property="og:image" content="https://datadaur.com/og-cover.png"/>
+    <meta property="og:image:alt" content="DataDaur preview image" />
 
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@datadaur" />
+    <meta name="twitter:creator" content="@datadaur" />
     <meta name="twitter:url" content="https://datadaur.com/"/>
     <meta name="twitter:title" content="DataDaur - AI Consulting for Web & Mobile Growth"/>
     <meta name="twitter:description"
           content="Custom AI tools, MVPs, and scalable digital solutions. Free 30-min consults available!"/>
     <meta name="twitter:image" content="https://datadaur.com/og-cover.png"/>
+    <meta name="twitter:image:alt" content="DataDaur preview image" />
 
 
     <!-- Schema.org Structured Data (JSON-LD for AI and search engines) -->
@@ -47,11 +51,10 @@
                 "https://bsky.app/profile/datadaur.bsky.social",
                 "https://x.com/datadaur"
             ],
-            "description": "DataDaur offers expert AI services, web & mobile development, SaaS solutions, SEO, and digital marketing. We serve industries like Fintech, Edutech, Healthtech, Cybersecurity, and e-Government."
-
+            "description": "DataDaur offers expert AI services, web & mobile development, SaaS solutions, SEO, and digital marketing. We serve industries like Fintech, Edutech, Healthtech, Cybersecurity, and e-Government.",
             "founder": {
                 "@type": "Person",
-                "name": "Woda Toki"
+                "name": "Tayyab Mughal"
             }
         }
     </script>
@@ -60,9 +63,11 @@
     <meta name="robots" content="index, follow"/>
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
 
-    <!-- Apple Web App Meta -->
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <!-- PWA / Theme -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="theme-color" content="#111827" />
+    <meta name="msapplication-TileColor" content="#111827" />
 
 
     <!-- Google tag (gtag.js) -->
