V3 on whole web

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/Favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DataDaur - AI Consulting</title>
-    <meta name="description" content="Boost growth with AI-powered tools, web & mobile development, and custom software solutions. Book a free 30-min consultation today!"/>
+    <title>DataDaur - Expert Flutter App Development for iOS & Android</title>
+    <meta name="description" content="DataDaur: Expert Flutter app development for high-performance, cross-platform mobile apps. Build iOS and Android apps with modern UI. Contact us today!"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QE7CLX5MDG"></script>
     <script>
