Add reCAPTCHA v3 support and update SEO metadata

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <meta property="og:description"
           content="Boost growth with AI-powered tools, web & mobile development, and custom software solutions. Book your free 30-min strategy call today."/>
     <meta property="og:image" content="https://datadaur.com/og-cover.png"/>
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="DataDaur preview image" />
 
 
